--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
             <li><a href="#home" class="poppinss">Home</a></li>
             <li><a href="#about" class="poppinss">About</a></li>
             <li><a href="#services" class="poppinss">Services</a></li>
-            <!-- <li><a href="#projects" class="poppinss">Projects</a></li> -->
+            <li><a href="https://github.com/paaskall" class="poppinss">Projects</a></li>
             <!-- <li><a href="#portfolio" class="poppinss">Portfolio</a></li> -->
         </ul>
         <ul class="flex s-center w-80 font-awesome ">
