--- a/index.html
+++ b/index.html
@@ -110,18 +110,17 @@
         </div>
 
     </section>
-    <!-- <section id="projects">
+    <section id="projects">
         <h1 class=" t-center my-2 t-white f-2">Projects</h1>
         <div class="projects-container flex s-center">
             <div class="projects-item flex f-col s-center items-center">
                 <div class="image-container p-one">
-                    <img src="foto1.jpg" alt="">
+                    <img src="visitor.png" alt="test">
                 </div>
-                <h1 class="t-white poppins">Weather App</h1>
-                <p class="t-white poppins"> A weather app using HTML, CSS and JavaScript. Fetch the weather from the
-                    openweather app using fetch api.</p>
+                <h1 class="t-white poppins">Library Visitors Manajemen</h1>
+                <p class="t-white poppins"> Library Visitors Management System is a web-based application developed using the Laravel framework to make it easier to manage library visitor data. This system is designed to improve the efficiency of library administration by providing digital visitor recording features, monitoring visitor activities, and secure and structured data storage.</p>
                 <div class="buttons flex s-around">
-                    <a href="#"
+                    <a href="https://github.com/paaskall/LibraryVisitorsManagement"
                         target="_blanks" class="btn mx-1 m-top">GitHub</a>
                     <a href="#" target="_blanks" class="btn m-top live">Live
                         Link</a>
@@ -129,13 +128,12 @@
             </div>
             <div class="projects-item flex f-col s-center items-center">
                 <div class="image-container p-one">
-                    <img src="foto2.jpg" alt="">
+                    <img src="browser (1).png" alt="">
                 </div>
-                <h1 class="t-white poppins">Burger King</h1>
-                <p class="t-white poppins">A simple landing page using HTML and CSS. This webiste is for burger shop who
-                    provides all the information of thir services at this landing page.</p>
+                <h1 class="t-white poppins">RESTful Api Jagoan Terbang</h1>
+                <p class="t-white poppins">Jagoan Terbang is a RESTful API designed to manage air transportation services, such as flight ticket booking, flight schedule information, and user data management. These APIs are developed using modern technologies to ensure fast performance, high security, and ease of integration with third-party applications.</p>
                 <div class="buttons flex s-around">
-                    <a href="#" target="_blanks"
+                    <a href="https://github.com/paaskall/RestFullAPI-JagoanTerbang" target="_blanks"
                         class="btn mx-1 m-top">GitHub</a>
                     <a href="#" target="_blanks" class="btn m-top live">Live
                         Link</a>
@@ -143,13 +141,11 @@
             </div>
             <div class="projects-item flex f-col s-center items-center">
                 <div class="image-container p-two">
-                    <img src="foto3.jpg" alt="">
+                    <img src="shopping.png" alt="">
                 </div>
 
-                <h1 class="t-white poppins">MBA Chai Wala</h1>
-                <p class="t-white poppins">Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic obcaecati cum
-                    nemo
-                    recusandae voluptas ipsum.s</p>
+                <h1 class="t-white poppins">Modern Shop</h1>
+                <p class="t-white poppins">Modern Shop is a simple e-commerce web application developed using HTML, CSS, and JavaScript. The project is designed to showcase a modern online shopping experience with interactive features that are responsive, easy to use, and aesthetically pleasing. Suitable as a small-scale shopping platform or web developer portfolio.</p>
                 <div class="buttons flex s-around">
                     <a href="#" target="_blank"
                         class="btn mx-1 m-top">GitHub</a>
@@ -158,7 +154,7 @@
                 </div>
             </div>
         </div>
-    </section> -->
+    </section>
 
     <section id="contact" class="m-b-1">
         <h1 class=" t-center my-2 t-white f-2">Contact Me</h1>
