--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <li><a href="#home" class="t-white roboto">Home</a></li>
                 <li><a href="#about" class="t-white roboto">About Me</a></li>
                 <li><a href="#services" class="t-white roboto">Services</a></li>
-                <li><a href="https://github.com/paaskall" class="t-white roboto">Projects</a></li>
+                <li><a href="#projects" class="t-white roboto">Projects</a></li>
             </ul>
         </div>
     </nav>
@@ -34,9 +34,9 @@
                 <a href="#about">
                     <li class="bottomo-hover flex s-center items-center"><i class="fa-solid fa-user"></i></li>
                 </a>
-                <!-- <a href="#skills">
+                <a href="#projects">
                     <li class="bottomo-hover flex s-center items-center"><i class="fa-solid fa-code"></i></li>
-                </a> -->
+                </a>
                 <a href="#services">
                     <li class="bottomo-hover flex s-center items-center">
                         <i class="fa-solid fa-rocket"></i>
