--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                 <div class="buttons flex s-around">
                     <a href="#" target="_blank"
                         class="btn mx-1 m-top">GitHub</a>
-                    <a href="#" target="_blank"
+                    <a href="https://github.com/paaskall/ModernShop" target="_blank"
                         class="btn m-top live">Live Link</a>
                 </div>
             </div>
