--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <h1 class="t-center my-2 t-white f-2">About Me</h1>
         <div class="about-container flex s-around ">
             <div class=" about-left flex s-center items-center">
-                <img src="[000519].jpg" alt="" style="width: 50%;">
+                <img src="WhatsApp Image 2025-03-02 at 14.33.19_815cb264.jpg" alt="" style="width: 50%;">
             </div>
 
             <div class="about-right flex">
