--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </div>
         <div class="home-right flex s-center items-center">
             <div class="circle flex s-center items-center" id="mainImage">
-                <img src="Foto1.jpg" alt="foto1">
+                <img src="WhatsApp Image 2025-03-02 at 14.33.19_815cb264.jpg" alt="foto1">
             </div>
 
         </div>
