--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <h4 class="poppinss">Frontend Web Developer</h4>
                 <a href="https://github.com/paaskall" target="_blank"><button
                         class="btn poppins">Projects</button></a>
-                <a class="btn live poppins" id="hireme" href="https://www.linkedin.com/in/paskal-arvito-5b3a0728b/"
+                <a class="btn live poppins" id="hireme" href="www.linkedin.com/in/paskal-arvito-weni"
                     target="_blank">Let's Talk </a>
             </div>
         </div>
@@ -79,7 +79,7 @@
                         an opportunity in Web Development. Who is committed to study web development. Mindset to full fill the life with
                         wonderful memories and knowledge.</p>
                     <a class="btn live poppins" id="hireme"
-                        href="https://www.linkedin.com/in/paskal-arvito-5b3a0728b/">Hire Me</a>
+                        href="">Hire Me</a>
                 </div>
             </div>
         </div>
@@ -191,7 +191,7 @@
             <!-- <li><a href="#portfolio" class="poppinss">Portfolio</a></li> -->
         </ul>
         <ul class="flex s-center w-80 font-awesome ">
-            <a href="https://www.linkedin.com/in/paskal-arvito-5b3a0728b/" target="_blank">
+            <a href="www.linkedin.com/in/paskal-arvito-weni" target="_blank">
                 <li><i class="fa-brands fa-linkedin-in"></i></li>
             </a>
             <a href="https://www.instagram.com/paskalll_/" target="_blank">
