--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </div>
         <div class="home-right flex s-center items-center">
             <div class="circle flex s-center items-center" id="mainImage">
-                <img src="Foto1.jpg" alt="foto1">
+                <img src="Foto(1).jpg" alt="foto1">
             </div>
 
         </div>
