--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     <p class="t-white poppins">A self-tought Frontend Web Developer Politeknik Negeri Ujung Pandang for
                         an opportunity in Web Development. Who is committed to study web development. Mindset to full fill the life with
                         wonderful memories and knowledge.</p>
-                    <a class="btn live poppins" id="hireme" href="Curriculum Vitae Paskal Arvito Weni.pdf" download>Curriculum Vitae</a>
+                    <a class="btn live poppins" id="hireme" href="Curriculum Vitae Paskal Arvito Weni.pdf" target="_blank">Curriculum Vitae</a>
                 </div>
             </div>
         </div>
