--- a/index.html
+++ b/index.html
@@ -83,6 +83,31 @@
             </div>
         </div>
     </section>
+    <section id="services">
+     <h1 class=" t-center my-2 t-white f-2">Services</h1>
+        <div class="services-container flex s-center">
+            <div class="test-item flex f-col items-center">
+                <img src="7040859.jpg" alt="">
+                <h1 class="t-white poppins">Front End Development</h1>
+                <p class="t-white poppins">Web Development is envolving everywhere. Every startup and every bussines
+                    have their own websites. As my passion I will help you to build your clean and fast website for your
+                    startup or your bussines.</p>
+            </div>
+            <div class="test-item flex f-col items-center">
+                <img src="Tiny graphic designer drawing with big pen on computer screen.jpg" alt="">
+                <h1 class="t-white poppins">Graphic Design</h1>
+                <p class="t-white poppins">Help build a strong brand image through cohesive design from marketing materials to social media 
+                    Catering to design needs for websites, social media, and other digital content, 
+                    Add unique visual elements through custom illustrations tailored to your preferences.</p>
+            </div>
+            <div class="test-item flex f-col items-center">
+                <img src="2001.i039.031_branding_isometric_concept_icons-10.jpg" alt="">
+                <h1 class="t-white poppins">Growth Strategies</h1>
+                <p class="t-white poppins">As a web developer also I will help your brand to grow up. I will provide
+                    the growth strategies for your brand. And also help in searching techniques for your brand.</p>
+            </div>
+        </div>
+    </section>
     <section id="projects">
         <h1 class=" t-center my-2 t-white f-2">Projects</h1>
         <div class="projects-container flex s-center">
@@ -128,33 +153,6 @@
             </div>
         </div>
     </section>
-
-    <section id="services">
-     <h1 class=" t-center my-2 t-white f-2">Services</h1>
-        <div class="services-container flex s-center">
-            <div class="test-item flex f-col items-center">
-                <img src="7040859.jpg" alt="">
-                <h1 class="t-white poppins">Front End Development</h1>
-                <p class="t-white poppins">Web Development is envolving everywhere. Every startup and every bussines
-                    have their own websites. As my passion I will help you to build your clean and fast website for your
-                    startup or your bussines.</p>
-            </div>
-            <div class="test-item flex f-col items-center">
-                <img src="Tiny graphic designer drawing with big pen on computer screen.jpg" alt="">
-                <h1 class="t-white poppins">Graphic Design</h1>
-                <p class="t-white poppins">Help build a strong brand image through cohesive design from marketing materials to social media 
-                    Catering to design needs for websites, social media, and other digital content, 
-                    Add unique visual elements through custom illustrations tailored to your preferences.</p>
-            </div>
-            <div class="test-item flex f-col items-center">
-                <img src="2001.i039.031_branding_isometric_concept_icons-10.jpg" alt="">
-                <h1 class="t-white poppins">Growth Strategies</h1>
-                <p class="t-white poppins">As a web developer also I will help your brand to grow up. I will provide
-                    the growth strategies for your brand. And also help in searching techniques for your brand.</p>
-            </div>
-        </div>
-    </section>
-
     <section id="contact" class="m-b-1">
         <h1 class=" t-center my-2 t-white f-2">Contact Me</h1>
         <div class="contact-container flex s-around items-centers">
@@ -187,7 +185,7 @@
             <li><a href="#about" class="poppinss">About</a></li>
             <li><a href="#services" class="poppinss">Services</a></li>
             <li><a href="https://github.com/paaskall" class="poppinss">Projects</a></li>
-            <!-- <li><a href="#portfolio" class="poppinss">Portfolio</a></li> -->
+            <li><a href="Curriculum Vitae Paskal Arvito Weni.pdf" class="poppinss">Curriculum Vitae</a></li>
         </ul>
         <ul class="flex s-center w-80 font-awesome ">
             <a href="https://www.linkedin.com/in/paskal-arvito-weni" target="_blank">
