--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> About Paskal's </title>
+    
+    <!-- Primary Meta Tags -->
+    <title>Paskal Arvito | Frontend Web Developer</title>
+    <meta name="title" content="Paskal Arvito | Frontend Web Developer">
+    <meta name="description" content="Portfolio of Paskal Arvito Weni, a self-taught Frontend Web Developer specializing in web development and graphic design.">
+    <meta name="keywords" content="frontend developer, web development, graphic design, Paskal Arvito, UI design, portfolio, Politeknik Negeri Ujung Pandang">
+    <meta name="author" content="Paskal Arvito Weni">
+    <meta name="robots" content="index, follow">
+    <meta name="language" content="English">
+    <meta name="revisit-after" content="7 days">
     <link rel="icon" type="image/x-icon" href="./Images/favicon.png">
     <link rel="stylesheet" href="animations.css">
     <link rel="stylesheet" href="style.css">
