--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 <h1 class="t-white">Paskal Arvito Weni</h1>
                 <h4 class="poppinss">Frontend Web Developer</h4>
                 <a href="https://github.com/paaskall" target="_blank"><button
-                        class="btn poppins">Projects</button></a>
+                        class="btn poppins">Github</button></a>
                 <a class="btn live poppins" id="hireme" href="https://www.linkedin.com/in/paskal-arvito-weni"
                     target="_blank">Let's Talk </a>
             </div>
