--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 <h4 class="poppinss">Frontend Web Developer</h4>
                 <a href="https://github.com/paaskall" target="_blank"><button
                         class="btn poppins">Github</button></a>
-                <a class="btn live poppins" id="hireme" href="https://www.linkedin.com/in/paskal-arvito-weni"
+                <a class="btn live poppins" id="hireme" href="https://shortcut-maker.en.uptodown.com/android"
                     target="_blank">Let's Talk </a>
             </div>
         </div>
