--- a/index.html
+++ b/index.html
@@ -69,6 +69,11 @@
     <link rel="canonical" href="https://paskalarvito.com/">
 </head>
 <body>
+    
+    <button class="theme-toggle" id="themeToggle" aria-label="Toggle theme">
+        <i class="fas fa-moon" id="themeIcon"></i>
+    </button>
+
     <nav id="navbar" class="flex s-around bg-color">
         <div class="left-nav">
             <h2 class="t-white">Paskal Arvito</h2>
