--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     
     <!-- Canonical URL -->
     <link rel="canonical" href="https://paskalarvito.com/">
-    <link rel="icon" href="icons8-p-32.png" type="image/x-icon">
+    <link rel="icon" href="parking.png" type="image/x-icon">
 </head>
 <body>
     
