--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <!-- Primary Meta Tags untuk SEO Google Search -->
-    <title>Paskal Arvito Weni | Frontend Web Developer & Graphic Designer</title>
+    <title>Paskal Arvito Weni</title>
     <meta name="title" content="Paskal Arvito Weni | Frontend Web Developer & Graphic Designer">
     <meta name="description" content="Paskal Arvito Weni adalah Frontend Web Developer lulusan Politeknik Negeri Ujung Pandang yang berfokus pada pengembangan website modern dan desain grafis kreatif. Lihat portfolio dan layanan profesional saya.">
     <meta name="keywords" content="Paskal Arvito Weni, Paskal Arvito, Frontend Developer Makassar, Web Developer Indonesia, Graphic Designer, UI/UX Design, Portfolio Paskal, Politeknik Negeri Ujung Pandang, Frontend Developer Ujung Pandang">
