--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     
     <!-- Primary Meta Tags untuk SEO Google Search -->
     <title>Paskal Arvito Weni</title>
-    <meta name="title" content="Paskal Arvito Weni | Frontend Web Developer & Graphic Designer">
-    <meta name="description" content="Paskal Arvito Weni adalah Frontend Web Developer lulusan Politeknik Negeri Ujung Pandang yang berfokus pada pengembangan website modern dan desain grafis kreatif. Lihat portfolio dan layanan profesional saya.">
+    <meta name="title" content="Paskal Arvito Weni">
+    <meta name="description" content="Paskal Arvito Weni adalah Frontend Web Developer dari Politeknik Negeri Ujung Pandang yang berfokus pada pengembangan website modern dan desain grafis kreatif. Lihat portfolio dan layanan profesional saya.">
     <meta name="keywords" content="Paskal Arvito Weni, Paskal Arvito, Frontend Developer Makassar, Web Developer Indonesia, Graphic Designer, UI/UX Design, Portfolio Paskal, Politeknik Negeri Ujung Pandang, Frontend Developer Ujung Pandang">
     <meta name="author" content="Paskal Arvito Weni">
     <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
