--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <meta property="og:url" content="https://aboutpaskal.vercel.app">
     <meta property="og:title" content="Paskal Arvito Weni">
     <meta property="og:description" content="Paskal Arvito Weni adalah Frontend Web Developer dari Politeknik Negeri Ujung Pandang yang berfokus pada pengembangan website modern dan desain grafis kreatif. Lihat portfolio dan layanan profesional saya.">
-    <meta property="og:image" content="https://aboutpaskal.vercel.app/Foto(2).jpg">
+    <meta property="og:image" content="https://aboutpaskal.vercel.app/parking.png">
     <meta property="og:image:alt" content="Foto Paskal Arvito Weni">
     <meta property="og:site_name" content="Portfolio Paskal Arvito Weni">
     <meta property="profile:first_name" content="Paskal">
