--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <!-- Primary Meta Tags untuk SEO Google Search -->
     <title>Paskal Arvito Weni</title>
     <meta name="title" content="Paskal Arvito Weni">
-    <meta name="description" content="Paskal Arvito Weni adalah Frontend Web Developer dari Politeknik Negeri Ujung Pandang yang berfokus pada pengembangan website modern dan desain grafis kreatif. Lihat portfolio dan layanan profesional saya.">
-    <meta name="keywords" content="Paskal Arvito Weni, Paskal Arvito, Frontend Developer Makassar, Web Developer Indonesia, Graphic Designer, UI/UX Design, Portfolio Paskal, Politeknik Negeri Ujung Pandang, Frontend Developer Ujung Pandang">
+    <meta name="description" content="Paskal Arvito Weni adalah Software Developer dari Politeknik Negeri Ujung Pandang yang berfokus pada pengembangan website modern dan desain grafis kreatif. Lihat portfolio dan layanan profesional saya.">
+    <meta name="keywords" content="Paskal Arvito Weni, Paskal Arvito, Software Developer Makassar, Web Developer Indonesia, Graphic Designer, UI/UX Design, Portfolio Paskal, Politeknik Negeri Ujung Pandang, Software Developer Ujung Pandang">
     <meta name="author" content="Paskal Arvito Weni">
     <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
     <meta name="language" content="Indonesian, English">
@@ -24,7 +24,7 @@
       "name": "Paskal Arvito Weni",
       "url": "https://aboutpaskal.vercel.app/",
       "image": "https://aboutpaskal.vercel.app/Foto(2).jpg",
-      "jobTitle": "Frontend Web Developer",
+      "jobTitle": "Software Developer",
       "alumniOf": {
         "@type": "CollegeOrUniversity",
         "name": "Politeknik Negeri Ujung Pandang"
@@ -42,7 +42,7 @@
     <meta property="og:type" content="profile">
     <meta property="og:url" content="https://aboutpaskal.vercel.app">
     <meta property="og:title" content="Paskal Arvito Weni">
-    <meta property="og:description" content="Paskal Arvito Weni adalah Frontend Web Developer dari Politeknik Negeri Ujung Pandang yang berfokus pada pengembangan website modern dan desain grafis kreatif. Lihat portfolio dan layanan profesional saya.">
+    <meta property="og:description" content="Paskal Arvito Weni adalah Software Developer dari Politeknik Negeri Ujung Pandang yang berfokus pada pengembangan website modern dan desain grafis kreatif. Lihat portfolio dan layanan profesional saya.">
     <meta property="og:image" content="https://aboutpaskal.vercel.app/parking.png">
     <meta property="og:image:alt" content="Foto Paskal Arvito Weni">
     <meta property="og:site_name" content="Portfolio Paskal Arvito Weni">
@@ -53,7 +53,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:url" content="https://paskalarvito.com/">
     <meta name="twitter:title" content="Paskal Arvito Weni">
-    <meta name="twitter:description" content="Paskal Arvito Weni adalah Frontend Web Developer dari Politeknik Negeri Ujung Pandang yang berfokus pada pengembangan website modern dan desain grafis kreatif. Lihat portfolio dan layanan profesional saya.">
+    <meta name="twitter:description" content="Paskal Arvito Weni adalah Software Developer dari Politeknik Negeri Ujung Pandang yang berfokus pada pengembangan website modern dan desain grafis kreatif. Lihat portfolio dan layanan profesional saya.">
     <meta name="twitter:image" content="https://aboutpaskal.vercel.app/Foto(2).jpg">
     <meta name="twitter:image:alt" content="Foto Paskal Arvito Weni">
     
@@ -115,7 +115,7 @@
             <div class="home-content">
                 <h6 class="poppinss">Hi, I'm</h6>
                 <h1 class="t-white">Paskal Arvito Weni</h1>
-                <h4 class="poppinss">Frontend Web Developer</h4>
+                <h4 class="poppinss">Software Developer</h4>
                 <a href="https://github.com/paaskall" target="_blank"><button
                         class="btn poppins">Github</button></a>
                 <a class="btn live poppins" id="hireme" href="https://www.linkedin.com/in/paskal-arvito-weni/"
@@ -140,7 +140,7 @@
             <div class="about-right flex">
                 <div class="about-content">
                     <h1 class="t-white m-b-1 poppins">Paskal Arvito Weni</h1>
-                    <p class="t-white poppins">A self-tought Frontend Web Developer Politeknik Negeri Ujung Pandang for
+                    <p class="t-white poppins">A self-tought Software Developer Politeknik Negeri Ujung Pandang for
                         an opportunity in Web Development. Who is committed to study web development. Mindset to full fill the life with
                         wonderful memories and knowledge.</p>
                     <a class="btn live poppins" id="hireme" href="CV_Paskal Arvito Weni 2025.pdf" target="_blank">Curriculum Vitae</a>
