Correct service title from 'Front End' to 'Web Development'

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
         <div class="services-container flex s-center">
             <div class="test-item flex f-col items-center">
                 <img src="7040859.jpg" alt="">
-                <h1 class="t-white poppins">Front End Development</h1>
+                <h1 class="t-white poppins">Web Development Development</h1>
                 <p class="t-white poppins">Web Development is envolving everywhere. Every startup and every bussines
                     have their own websites. As my passion I will help you to build your clean and fast website for your
                     startup or your bussines.</p>
